# coursework_2024

./: Dockerfile  README.md  \  compose.yaml  docker-compose.yaml  requirements.txt
app/: alembic.ini  db_utils.py  requirements.txt
app/alembic/versions/: 0d938e2ad55a_add_name_col_to_product.py  64e5868ef0fe_chenge_column_name_from_product_to_.py  7bb9fa0075ac_fix_name_mistake.py  8286411b3eec_add_admin_relationship_change_some_.py
app/api/: main.py
app/core/: db_utils.py  models.py
app/src/: main.py
app/src/alembic/versions/: 6f4687827d49_db_v1.py
backend/: .env.example  Dockerfile  Readme.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/alembic/versions/: 00ba630cadb8_change_price_datatype_from_money_to_.py  20a92c11c8b7_fix_numeric_data_type.py  8ed2995fd4af_change_relationships_in_feedback.py
backend/app/api/: dependencies.py
backend/app/api/routes/: user.py
backend/app/core/: db_utils.py  models.py  pydantic_models.py  sequrity.py  settings.py
backend/app/logic/: ping.py
backend/sql/: Readme.md  check_order_date_on_update.sql  trigger_check_rate_in_1_5.sql
backend/sql/dop/: find_most_loved_manuf.sql
frontend/: Readme.md
sql/: check_order_date_on_update.sql  check_product_in_stock_is_positive.sql  count_order_cost.sql  fill_out_db.sql  trigger_on_orderproduct_add.sql
sql/dop/: fb_for_only_bought.sql  find_most_loved_manuf.sql  prod_lover.sql
src/: alembic.ini  models.py
src/alembic/: env.py
